crates/rspack_error/tests/fixtures/ts_syntax_error/fixtures__ts_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: ts_syntax_error
---
ModuleParseError

  × Module parse failed:
  ╰─▶   × Typescript parsing error: Expected ',', got 'g'
         ╭─[3:1]
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
       5 │     g = CONST
         ·     ┬
         ·     ╰── Expected ',', got 'g'
       6 │ }
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

